--- a/app_teachers/templates/messages.html
+++ b/app_teachers/templates/messages.html
@@ -75,7 +75,7 @@
             </div>
         </script>
 
-        <div class="d-none" type="text/x-handlebars-template" id="chatRoomItemTemplate">
+        <script class="d-none" type="text/x-handlebars-template" id="chatRoomItemTemplate">
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex flex-row">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </script>
 
     {% endverbatim %}
 
