--- a/app_students/templates/inbox/messages.html
+++ b/app_students/templates/inbox/messages.html
@@ -78,7 +78,7 @@
             </div>
         </script>
 
-        <div class="d-none" type="text/x-handlebars-template" id="chatRoomItemTemplate">
+        <script class="d-none" type="text/x-handlebars-template" id="chatRoomItemTemplate">
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex flex-row">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </script>
     {% endverbatim %}
 {% endblock %}
 {% block scripts %}
