--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -14,7 +14,7 @@
         <meta name="robots" content="all">
 
         <title>
-            {% block title %}Online OSHA-Compliant IACET/PDH Construction Safety Training  | pdhsafety.com
+            {% block title %}Online OSHA-Trainers IACET/PDH Construction Safety Training  | pdhsafety.com
             {% endblock %}
         </title>
 
