--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -53,7 +53,7 @@
                         <div class="col-lg-12 col-md-6">
                             <div class="contact-item">
                                 <p>Corporate Office</p>
-                                <h4>189 Valentine Ln Yonkers, New York 10705
+                                <h4>1809 Troy Ave  Brooklyn, New York 11234
                                 </h4>
                             </div>
                         </div>
