credits field added in features

--- a/app_students/templates/certificate/certificate_template.html
+++ b/app_students/templates/certificate/certificate_template.html
@@ -291,6 +291,13 @@
                             </b>
                         </p>
                         <h1 align="center" style='text-align:center'>{{ object.title }}</h1>
+
+                        <p class="MsoNormal" align="center" style='text-align:center;margin-bottom: 10px;'>
+                            <span style='font-size:14.0pt;'>
+                             
+                                {{ credits }}</span>
+                        </p>
+
                         <p class="MsoNormal" align="center" style='text-align:center'>
                             <span style='font-size:18.0pt;font-family:"Colonna MT";color:maroon'>
                                 Completion Date
