--- a/app_teachers/templates/manage/course/_features.html
+++ b/app_teachers/templates/manage/course/_features.html
@@ -19,7 +19,7 @@
                             <div class="col-3">
                                 <div class="list-group" id="list-tab" role="tablist">
                                     <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">
-                                        Credits</a>
+                                        Certificate</a>
                                     <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">
                                         Learning Outcomes</a>
                                     <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Notes
@@ -27,6 +27,9 @@
 
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">
                                         Completion Requirements</a>
+
+                                    <a class="list-group-item list-group-item-action" id="list-credits-list" data-toggle="list" href="#list-credits" role="tab" aria-controls="credits">
+                                        Credits</a>
 
                                     <a class="list-group-item list-group-item-action" id="list-more-list" data-toggle="list" href="#list-more" role="tab" aria-controls="more">
                                         More Features</a>
@@ -55,6 +58,16 @@
                                             {{ completion_requirements }}
                                         </textarea>
                                     </div>
+                                    <div class="tab-pane fade" id="list-credits" role="tabpanel" aria-labelledby="list-credits-list">
+                                       
+                                         
+                                        <div class="form-group">
+                                            <label for="exampleFormControlSelect1">Credits</label>
+                                            <input name="credits" value=" {{ credits }}" class="form-control" />
+                                        </div>
+
+                                    </div>
+
                                     <div class="tab-pane fade" id="list-more" role="tabpanel" aria-labelledby="list-more-list">
                                         <div class="row">
                                             <div class="col">
